@@ -2,6 +2,9 @@
 
 #include <pqxx/pqxx>
 
+// Don't try this at home: use some libpqxx-internal information about libpq
+#include <pqxx/config-internal-libpq.h>
+
 using namespace PGSTD;
 using namespace pqxx;
 
@@ -23,10 +26,13 @@ int main()
       // This should fail:
       T.exec("DELIBERATELY INVALID TEST QUERY...", "invalid_query");
 
-      // TODO: This does not seem to fail as it should on postgres 7.3
       throw logic_error("Invalid query did not throw exception!");
     }
+#if defined(PQXX_HAVE_PQRESULTERRORFIELD)
     catch (const syntax_error &e)
+#else
+    catch (const sql_error &e)
+#endif
     {
       cout << "(Expected) Query failed: " << e.query() << endl
 	   << "(Expected) Error was: " << e.what() << endl;
